# xvega-bindings

./: CMakeLists.txt  README.md  environmen-dev.yml  environment-dev.yml  xvega-bindingsConfig.cmake.in
.github/workflows/: main.yml
cmake/: xvega-bindingsConfig.cmake.in
include/: utils.hpp  xvega-bindings.hpp
include/xvega-bindings/: utils.hpp  xvega-bindings.hpp  xvega_bindings.hpp  xvega_bindings_config.hpp
test/: CMakeLists.txt  main.cpp  test_bindings.cpp
