cmake_minimum_required(VERSION 3.1)

project(xvega-bindings VERSION 0.0.1 LANGUAGES CXX)

set(XV_BINDINGS_TARGET_NAME ${PROJECT_NAME})
set(XV_BINDINGS_INCLUDE_INSTALL_DIR "${CMAKE_INSTALL_INCLUDEDIR}")
set(XV_BINDINGS_CONFIG_INSTALL_DIR "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}" CACHE INTERNAL "")
set(XV_BINDINGS_CMAKE_CONFIG_TEMPLATE "cmake/config.cmake.in")
set(XV_BINDINGS_TARGETS_EXPORT_NAME "${PROJECT_NAME}Targets")
set(XV_BINDINGS_CMAKE_CONFIG_DIR "${CMAKE_CURRENT_BINARY_DIR}")
set(XV_BINDINGS_CMAKE_PROJECT_CONFIG_FILE "${XV_BINDINGS_CMAKE_CONFIG_DIR}/${PROJECT_NAME}Config.cmake")
set(XV_BINDINGS_CMAKE_PROJECT_TARGETS_FILE "${XV_BINDINGS_CMAKE_CONFIG_DIR}/${PROJECT_NAME}Targets.cmake")

# Targeting
# =========
add_library(${XV_BINDINGS_TARGET_NAME} INTERFACE)
if (${CMAKE_VERSION} VERSION_LESS "3.8.0")
    target_compile_features(${XV_BINDINGS_TARGET_NAME} INTERFACE cxx_range_for)
else()
    target_compile_features(${XV_BINDINGS_TARGET_NAME} INTERFACE cxx_std_11)
endif()

target_include_directories(
    ${XV_BINDINGS_TARGET_NAME}
    INTERFACE
    $<BUILD_INTERFACE:${XV_BINDINGS_INCLUDE_INSTALL_DIR}>
    $<INSTALL_INTERFACE:include>
)

# Installing
# ==========
configure_file(
    ${XV_BINDINGS_CMAKE_CONFIG_TEMPLATE}
    ${XV_BINDINGS_CMAKE_PROJECT_CONFIG_FILE}
    @ONLY
)

install(
    DIRECTORY ${XV_BINDINGS_INCLUDE_INSTALL_DIR}
    DESTINATION ${XV_BINDINGS_INCLUDE_INSTALL_DIR}
)
install(
    FILES ${XV_BINDINGS_CMAKE_PROJECT_CONFIG_FILE}
    DESTINATION ${CMAKE_INSTALL_PREFIX}/${XV_BINDINGS_CONFIG_INSTALL_DIR}
)
export(
    TARGETS ${XV_BINDINGS_TARGET_NAME}
    FILE ${XV_BINDINGS_CMAKE_PROJECT_TARGETS_FILE}
)
install(
    TARGETS ${XV_BINDINGS_TARGET_NAME}
    EXPORT ${XV_BINDINGS_TARGETS_EXPORT_NAME}
    INCLUDES DESTINATION ${XV_BINDINGS_INCLUDE_INSTALL_DIR}
)
install(
    EXPORT ${XV_BINDINGS_TARGETS_EXPORT_NAME}
    DESTINATION ${CMAKE_INSTALL_PREFIX}/${XV_BINDINGS_CONFIG_INSTALL_DIR}
)
